<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExpenseTracker</string>
    <string name="enter_expense_activity">EnterExpenseActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_expense">Enter Expense</string>
    <string name="view_report">View Report</string>
    <string name="validate_card">Validate Card</string>
    <string name="desc">Expense Tracker Application</string>
    <string name="submit_expense">Submit Expense</string>
    <string name="cardtype">Select Card Type</string>
    <string name="cardtype1">American Express</string>
    <string name="cardtype2">Visa</string>
    <string name="cardtype3">Discover</string>
    <string name="cardtype4">Ca$h</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="vendor_hint">Name of Store or Vendor</string>
    <string name="price_hint">$0.00</string>
    <string name="view_expense_activity">ViewExpenseActivity</string>
    <string name="init_expense_file">Initialize Expense File</string>
    <string name="expense_file">ExpenseFile.dat</string>
    <string name="current_flag">CURRENT</string>
    <string name="validated_flag">VALIDATED</string>
    <string name="deleted_flag">DELETED</string>
    <string name="save_expenses">Save Expenses</string>
    <string name="view_american_express">View American Express</string>
    <string name="view_visa">View Visa</string>
    <string name="view_discover">View Discover</string>
    <string name="sort_by_date">Sort By Date</string>
   
</resources>